--- a/moje_forum/package.json
+++ b/moje_forum/package.json
@@ -8,11 +8,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "firebase": "^9.1.3",
+    "firebase-auth-lite": "^0.8.9",
+    "firebase-firestore-lite": "^1.0.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
+    "react-firebase-hooks": "^3.0.4",
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.10.0",
+    "recharts": "^2.1.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
